--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li>Courses / კურსები | </li>
                             <li>About us / ჩვენს შესახებ | </li>
                             <li>Contact / კონტაქტი | </li>
-                             
+                            <li>შესვლა / რეგისტრაცია</li>
 
                         </ul>
                     </nav>
