--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
                 <div class="right_main_header">
                     <nav>
                         <ul>
-                            <a class="hr" href="index.html"><li>Main / მთავარი | </li></a>
-                            <li>Courses / კურსები | </li>
-                            <li>About us / ჩვენს შესახებ | </li>
-                            <li>Contact / კონტაქტი | </li>
-                            <li>შესვლა / რეგისტრაცია</li>
+                            <a class="hr" href="index.html"><li>მთავარი</li></a>
+                            <li>კურსები</li>
+                            <li>ჩვენს შესახებ</li>
+                            <li>კონტაქტი</li>
+                            <li>რეგისტრაცია</li>
+                            <li>შესვლა</li>
 
                         </ul>
                     </nav>
