--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Lab</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -31,8 +32,22 @@
                         </ul>
                     </nav>
                 </div>
+                <div class="right_main_header_for_480">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </div>
         </div>
     </header>
+
+
+<div class="main_page_image">
+    <div class="overlay_content">
+        <h1>დაინტერესებული ჩვენი აკადემიით?</h1>
+        <p class="main_page_text_in_backgorund">ჩვენს აკადემიაში თქვენ ისწავლით, როგორ შექმნათ ვებსაიტები, აპლიკაციები და თამაშები, როგორ მოაგვაროთ კოდის შეცდომები, და როგორ შექმნათ საკუთარი პროექტები, რომლებიც გაძლევთ პრაქტიკულ გამოცდილებას და რეალურ კარიერულ შესაძლებლობებს.</p>
+        <button class="button-85" role="button">დაიწყე დღესვე!</button>
+    </div>
+</div>
+
+
 </body>
 </html>
