--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div class="main_page_image">
     <div class="overlay_content">
-        <h1>დაინტერესებული ჩვენი აკადემიით?</h1>
+        <h1>დაინტერესებული ხართ ჩვენი აკადემიით?</h1>
         <p class="main_page_text_in_backgorund">ჩვენს აკადემიაში თქვენ ისწავლით, როგორ შექმნათ ვებსაიტები, აპლიკაციები და თამაშები, როგორ მოაგვაროთ კოდის შეცდომები, და როგორ შექმნათ საკუთარი პროექტები, რომლებიც გაძლევთ პრაქტიკულ გამოცდილებას და რეალურ კარიერულ შესაძლებლობებს.</p>
         <button class="button-85" role="button">დაიწყე დღესვე!</button>
     </div>
