--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-
+<main>
 <div class="main_page_image">
     <div class="overlay_content">
         <h1>დაინტერესებული ხართ ჩვენი აკადემიით?</h1>
@@ -49,5 +49,15 @@
 </div>
 
 
+
+
+
+
+
+
+</main><footer>
+    <div class="footer_main">
+        </div>
+    </footer>   
 </body>
 </html>
