--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                         </ul>
                     </nav>
-                </div>
+                </div> 
                 <div class="right_main_header_for_480">
                     <i class="fa-solid fa-bars"></i>
                 </div>
@@ -48,16 +48,12 @@
     </div>
 </div>
 
+</main>
 
-
-
-
-
-
-
-</main><footer>
+<footer>
     <div class="footer_main">
         </div>
-    </footer>   
+</footer>  
+
 </body>
 </html>
