--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </ul>
                     </nav>
                 </div> 
-                <div class="right_main_header_for_480">
+                <div class="right_main_header_">
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
