დიდი განახლება. ნავიგაცია. ნავ ბარის სკრიპტი. ახალი გვერდები

--- a/register.html
+++ b/register.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Lab</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="./responsive.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="Code Lab logo.png">
+
 </head>
 <body>
-    <header>
+        <header>
         <div class="main_header">
             <div class="center_main_header">
                 <div class="left_main_header">
@@ -54,50 +55,5 @@
 
 
     </header>
-
-<main>
-<div class="main_page_image">
-    <div class="overlay_content">
-        <h1 id="main_page_h1"><center>დაინტერესებული ხართ ჩვენი აკადემიით?</center></h1>
-        <center><p class="main_page_text_in_backgorund">ჩვენს აკადემიაში თქვენ ისწავლით, როგორ შექმნათ ვებსაიტები, აპლიკაციები და თამაშები, როგორ მოაგვაროთ კოდის შეცდომები, და როგორ შექმნათ საკუთარი პროექტები, რომლებიც გაძლევთ პრაქტიკულ გამოცდილებას და რეალურ კარიერულ შესაძლებლობებს.</p> </center>
-        <button class="button-85" role="button">დაიწყე დღესვე!</button>
-    </div>
-</div>
-
-
-
-
-
-
-
-
-</main>
-<footer>
-    <div class="footer_main">
-        </div>
-    </footer>   
-
-
-
-
-
-
-
-
-
-
-    <script>
-const menuBtn = document.getElementById("right_main_header_2");
-const mobileMenu = document.getElementById("mobile_menu");
-
-menuBtn.addEventListener("click", () => {
-    if (mobileMenu.style.display === "block") {
-        mobileMenu.style.display = "none";
-    } else {
-        mobileMenu.style.display = "block";
-    }
-});
-</script>
-
 </body>
 </html>
